# src/controllers/user.controller.ts
@@ -1,7 +1,7 @@
-import { Controller, Post, Get, Route, Body, SuccessResponse, Tags, Middlewares, Header, Request, Security} from 'tsoa';
+import { Controller, Post, Get, Route, Body, SuccessResponse, Tags, Middlewares, Header, Request, Security, Response} from 'tsoa';
 import UserModel, { User, DocUser } from "../../models/user"
-import { NextFunction} from 'express';
-import { Request as ExpressRequest, Response as ExpressResponse } from 'express';
+import { isValidCreateUser, isValidEmail } from '../utils/createUser.validator';
+
 
 import jwt from 'jsonwebtoken'
 import dotenv from 'dotenv';
@@ -12,8 +12,8 @@ const jwtSecret = process.env.jwtSecret;
 const salt = 10
 
 interface login{
-    email : String,
-    password: String,
+    email : string,
+    password: string,
 }
 
 interface createResult {
@@ -24,44 +24,43 @@ interface createResult {
 type loginResult = createResult;
 
 
-const middlwareCalled = async(req:any, res:Response, next:NextFunction)=>{
-    try
-    {
-        const cookies = req.headers.cookie;
+// const middlwareCalled = async(req:any, res:Response, next:NextFunction)=>{
+//     try
+//     {
+//         const cookies = req.headers.cookie;
 
-        if (cookies) {
-            const cookiesArray = cookies.split(';');
-            const accessTokenCookie = cookiesArray.find(cookie => cookie.trim().startsWith('access_token='));
+//         if (cookies) {
+//             const cookiesArray = cookies.split(';');
+//             const accessTokenCookie = cookiesArray.find(cookie => cookie.trim().startsWith('access_token='));
     
-            if (accessTokenCookie) {
-                const access_token = accessTokenCookie.split('=')[1];
-                const validJWT = jwt.verify(access_token, jwtSecret);
-                console.log("Jwt is valid or not? ");
-                console.dirxml(validJWT);
-                if(validJWT)
-                    {
-                        req.user = validJWT;
-                        next()
-                    }
-                    else{
-                        throw new Error("Access cookie not found");
-                    }
+//             if (accessTokenCookie) {
+//                 const access_token = accessTokenCookie.split('=')[1];
+//                 const validJWT = jwt.verify(access_token, jwtSecret);
+               
+//                 if(validJWT)
+//                     {
+//                         req.user = validJWT;
+//                         next()
+//                     }
+//                     else{
+//                         throw new Error("Access cookie not found");
+//                     }
     
-            } else {
-                console.log("Access token cookie not found");
-            }
-        } else {
-            throw new Error("Access cookie not found");
-        }
+//             } else {
+//                 console.log("Access token cookie not found");
+//             }
+//         } else {
+//             throw new Error("Access cookie not found");
+//         }
         
-    }
-    catch(error)
-    {
-        console.log("Error occured: " + error)
-    }
+//     }
+//     catch(error)
+//     {
+//         next(error);
+//     }
    
    
-}
+// }
 
 @Route('user')
 @Tags('User')
@@ -73,33 +72,42 @@ export class UserController extends Controller {
      * @returns user object
      */
     @SuccessResponse('200', 'User Object')
+    @Response('500', 'Internal Server Error')
+    @Response('400', 'Bad Request')
    @Header()
     @Post('create')
-    public async createUser(@Body() requestBody: User): Promise<DocUser> {
+    public async createUser(@Body() requestBody: User): Promise<DocUser | String>{
         try {
-            console.log("Started");
+            if(!isValidCreateUser(requestBody.username, requestBody.email, requestBody.password))
+                {
+                    this.setStatus(400);
+                    throw new Error("Invalid From Data");
+                }
             const newUser = requestBody;
             newUser.password = await bcrypt.hash(newUser.password, salt);
-            console.log("Salt added")
             const {username, email, role, id} = await UserModel.create(newUser);
-            console.log("User crearted");
             const user = {username, email, role};
-            console.log("sample user formed");
             const data = {id, role};
             const access_token = jwt.sign(data, jwtSecret, {expiresIn:"1h"});
             const options = {httpOnly:true, secure:false}
-            console.log("cookies set");
-            const cookieOptions = Object.entries(options)
-    .map(([key, value]) => `${key}=${value ? 'true' : 'false'}`)
-    .join('; ');
-            console.log("Reached here");
+            let cookieOptions = Object.entries(options)
+            .map(([key, value]) => `${key}=${value ? 'true' : 'false'}`)
+            .join('; ');
+            const expiryDate = new Date();
+        expiryDate.setTime(expiryDate.getTime() + (1 * 60 * 60 * 1000)); // 1 hour from now
+        cookieOptions += `; Expires=${expiryDate.toUTCString()}`;
+
             this.setHeader("Set-Cookie", `access_token =${access_token}; ${cookieOptions}`);
             // res.cookie('access_token', "Latest token by Hari", options);
-            this.setStatus(200)
+            this.setStatus(200);
             return JSON.parse(JSON.stringify(user));
         } catch (error) {
-            this.setStatus(502)
-            throw new Error("Error occurred");
+            if (error instanceof Error)
+                {
+                    return "Error occured: " + error.message
+                }
+                this.setStatus(500);
+                return "Internal Server Error"   
         }
     }
 
@@ -109,17 +117,23 @@ export class UserController extends Controller {
  * @summary Get All Users
  */
 @Get('get')
-@Middlewares(middlwareCalled)
-// @Security('cookieAuth')
-public async getUsers(@Request() req: any): Promise<DocUser[]> {
+@SuccessResponse('200', "Array of User Objects")
+@Response('401', 'Unauthorized')
+@Response('500', 'Internal Servel Error')
+// @Middlewares(middlwareCalled)
+@Security('access_token', ['read:example'])
+public async getUsers(@Request() req: any): Promise<DocUser[] | String> {
     try {
-        console.log("Incoming user details");
-        console.dirxml(req.user);
         const users: DocUser[] = await UserModel.find();
         return JSON.parse(JSON.stringify(users));
     } catch (error) {
-        this.setStatus(500);
-        throw new Error("Internal server error occurred.");
+        if (error instanceof Error) {
+            return "Error occurred: " + error.message;
+        }
+        else{
+            this.setStatus(500);
+            return "Internal Server Error";
+        }
     }
 }
 
@@ -129,13 +143,20 @@ public async getUsers(@Request() req: any): Promise<DocUser[]> {
      */
     @Post("login")
     @SuccessResponse('200', 'User Object')
-    public async loginUser(@Body() requestBody:login): Promise<loginResult>{
+    @Response("401", "Unauthorized")
+    @Response('500', 'Internal Server Error')
+    public async loginUser(@Body() requestBody:login): Promise<loginResult | string>{
         try{
+            if(isValidEmail(requestBody.email))
+                {
+                    this.setStatus(400)
+                    throw new Error("Invalid From Data");
+                }
             const user = await UserModel.findOne({email:requestBody.email});
             if(!user)
                 {
-                    this.setStatus(404)
-                    return JSON.parse(JSON.stringify("User not found"));
+                    this.setStatus(401)
+                    throw new Error("Credentials are invalid");
                 }
             const validPassword = await bcrypt.compare(requestBody.password, user.password);
             if(validPassword)
@@ -143,26 +164,32 @@ public async getUsers(@Request() req: any): Promise<DocUser[]> {
                     const data = {id:user.id, role: user.role};
                     const access_token = jwt.sign(data, jwtSecret, {expiresIn:"1h"});
                     const options = {httpOnly:true, secure:false}
-                    const cookieOptions = Object.entries(options)
+                    let cookieOptions = Object.entries(options)
                     .map(([key, value]) => `${key}=${value ? 'true' : 'false'}`)
                     .join('; ');
-
+                    const expiryDate = new Date();
+                    expiryDate.setTime(expiryDate.getTime() + (1 * 60 * 60 * 1000)); // 1 hour from now
+                    cookieOptions += `; Expires=${expiryDate.toUTCString()}`;
                     this.setStatus(200);
                     this.setHeader("Set-Cookie", `access_token =${access_token}; ${cookieOptions}`);
                     return JSON.parse(JSON.stringify({name:user.username, role:user.role, email:user.email}))
-                    
                 }
                 else{
-                    this.setStatus(404);
-                    return JSON.parse(JSON.stringify("Credentils are wrong."))
+                    this.setStatus(401)
+                    throw new Error("Credentials are invalid");
                 }
-        }
+                }
         catch(error)
         {
-            this.setStatus(502);
-            throw new Error("Internal server error occured.");
+            if (error instanceof Error)
+                {
+                    return "Error occured: " + error.message
+                }
+                this.setStatus(500);
+                return "Internal Server Error"   
+        }
         }
 
         
     }
-}
+
